# radish

./: .gitignore  Cargo.toml  README.md  gleam.toml  manifest.toml
.github/workflows/: test.yml
backend/: gleam.toml  manifest.toml
backend/src/: interpreter.gleam  parser.gleam  process_handler.gleam  process_handler_ffi.erl  radish.gleam  radish_shell.gleam  socket_connections.erl
backend/src/interpreter/: expression.gleam
backend/test/: radish_test.gleam  utils.gleam  utils_ffi.erl
backend/test/interpreting/external_commands/: basic_externals.gleam
backend/test/interpreting/functions/: boolean_operators.gleam  if_expressions_test.gleam  operators.gleam
backend/test/parsing/: function_call_test.gleam  parsing_test.gleam  string_test.gleam  variable_test.gleam
frontend/: Cargo.toml
frontend/src/: main.rs
src/: input_reader.rs  interpreter.gleam  lib.rs  main.rs  parser.gleam  radish.gleam  tokenizer.rs  utils.rs
src/interpreter/: expression.gleam  shell.gleam  state.gleam
test/: radish_test.gleam
test/interpreting/functions/: boolean_operators.gleam
test/parsing/: function_call_test.gleam  list_test.gleam  variable_test.gleam
